--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body>
-    <video autoplay loop play-inline class="clip">
+    <video autoplay loop plays-inline class="clip">
         <source src="Şeffaf kargo.mp4">
     </video>
     <div class="container">
