--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </script>
 </head>
 <body>
-    <video autoplay loop plays-inline class="clip">
-        <source src="Şeffaf kargo.mp4">
-    </video>
+    <video autoplay loop plays-inline class="clip" controls>
+        <source src="Şeffaf kargo.mp4" type="video/mp4">
+      </video>
     <div class="container">
         <div class="mainpage">
             <h1>Tlh Code</h1>
