--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
         function github() {
             window.open("https://github.com/TalhaOzturk15");
         }
+        window.onload=function(){
+            document.getElementsByClassName("clip").play();
+        }
     </script>
 </head>
 <body>
-    <video autoplay loop plays-inline class="clip" controls>
+    <video autoplay loop plays-inline class="clip">
         <source src="Şeffaf kargo.mp4" type="video/mp4">
       </video>
     <div class="container">
