--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
 </head>
 <body>
-    <video autoplay loop class="clip">
+    <video autoplay loop muted class="clip">
         <source src="Şeffaf kargo.mp4" type="video/mp4">
       </video>
     <div class="container">
